--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/SunooBertsch/d3Visualization#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "express": "^4.16.1",
     "mongoose": "^4.11.14",
