--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.1",
     "mongoose": "^4.11.14",
     "nodemon": "^1.12.1",
-    "satori-rtm-sdk": "^1.1.1"
+    "satori-rtm-sdk": "^1.1.1",
+    "socket.io": "^2.0.3"
   }
 }
